app/assets/stylesheets/pages/_show.scss
.container-projects {
  padding: 0 30px 0px 20px;
  width: 100%;
}

.row {
  --bs-gutter-x: 0rem;
  justify-content: space-between;
}

.card {
  background-color: white;
  color: black;
  border: solid 1px #e2e2e2;
  border-radius: 8px;
  margin-top: 20px;
  width: 95%;
  box-shadow: 2px 2px 3px #e2e2e2;
  padding: 0px;
}

.full-width {
  width: 100%;
}

.upload-photo {
  border: 1px solid #d3d3d3;
  padding: 16px 24px;
  cursor: pointer;
  font-weight: 500;
  background: white;
  border-radius: 2px;
}

.card-img {
  // background-image: "";
  // background-size: cover;
  height: 200px;
  object-fit: cover;
  max-width: 100%;
}

.card-presentation {
  display: block;
  flex-direction: row;
  gap: 10px;
}

.card-presentation img {
  width: 100%;
  max-height: 400px; /* Limite la hauteur de l'image */
  object-fit: cover;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.card-caracteristic {
display: flex;
justify-content: space-between;
padding: 16px;
}

.pen {
  padding-left: 93%;
  padding-top: 20px;
}

.onglets {
  background-color: white;
  color: black;
  border: solid 1px #e2e2e2;
  border-radius: 8px;
  width: 95%;
  box-shadow: 2px 2px 3px #e2e2e2;
  margin-top: 40px;
  margin-bottom: 40px;
}

.w100 {
  width: 194px;
}
.tcenter {
  text-align: center;
}

.card-title {
  margin-top: 15px;
  margin-bottom: 15px;
  margin: 0;
  font-size: 18px;
}
  .card-title-show {
  padding-top: 20px;
  padding-left: 20px;
  font-size: 20px;
  font-weight: 500;
}

.card-text {
  margin-left: 15px;
  margin-right: 15px;
  font-weight: 300;
  border-top: 1px solid #e2e2e2;
  padding-top: 10px;
  font-size: 13px;
}

.card-progression {
  margin-left: 48px;
  margin-right: 48px;
  display: flex;
  flex-direction: row;
  gap: 100px;
  align-items: flex-start;
  justify-content: space-between;
}

.cardsmall {
  border: 0px black solid;
  margin-bottom: 16px;
  width: 25%;
  text-align: center;
}

.greentext {
  color: #169151;
}

.w3-round-xlarge{border-radius:16px}
.w3-round-large{border-radius:8px}
.w3-darkblue,.w3-hover-blue:hover{color:#fff!important;background-color:#3d93f5!important}
.w3-blue,.w3-hover-blue:hover{color:#fff!important;background-color:#8bbff8!important}
.w3-container,.w3-panel{padding:0.01em 16px}.w3-panel{margin-top:16px;margin-bottom:16px}
.w3-light-grey,.w3-hover-light-grey:hover,.w3-light-gray,.w3-hover-light-gray:hover{color:#000!important;background-color:#f1f1f1!important}
.w3-green,.w3-hover-green:hover{color:#fff!important;background-color:#faa060!important}
.w3-darkgreen,.w3-hover-green:hover{color:#fff!important;background-color:#e27a11!important}


.w3-darkblue {
  max-height:  24px;
}

.w3-container {
  max-height: 24px;
  min-inline-size: 70px;
}



.blue {
  display: inline-block;
  border: solid 1px #218aff;
  border-radius: 32px;
  background-color: #218aff;
  margin-top: 24px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  margin-left: 5%;
  padding-left: 3%;
  padding-right: 3%;
  padding-top: 12px;
  line-height: 20px;
  font-size: 16px;
  max-width: 40%;
  text-align: left;
  color: white;
}
.grey {
  display: inline-block;
  border: solid 1px #aeb9cc;
  border-radius: 32px;
  background-color: #aeb9cc;
  margin-top: 24px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  margin-left: 55%;
  padding-left: 3%;
  padding-right: 3%;
  padding-top: 12px;
  line-height: 20px;
  font-size: 16px;
  max-width: 40%;
  text-align: left;
  color: white;
}
.msgLeft {
  display: flex;
  flex-direction: column;
  gap: 8px;
  align-items: left;
  justify-content: center;
}
.colgrey {
  color: grey;
  margin-bottom: 0px;
  padding-bottom: 0px;
}
.txtshift {
  display: inline-block;
  margin-left: 55%;
  font-size: 12px;
  padding-top: 0px;
  margin-top: 0px;
  line-height: 10px;
}
.txtshiftsmall {
  display: inline-block;
  margin-left: 5%;
  font-size: 12px;
  padding-top: 0px;
  margin-top: 0px;
  line-height: 10px;
}
.white{
  color: white;
}
.boxrounded {
  width: 70%;
  justify-content: center;
  padding-top:24px;
  padding-bottom:24px;
  margin-left: 15%;
}
.scrollonglet {
  height: 530px;
  overflow-y: auto;
}
.fixed-height {
  height: 530px;
  padding: 0px;
}
// nav link

.nav-link {
  color: black
}

.nav-link:hover {
  color: white;
  background-color: black;
}

// tâches
.task-notification {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 8px;
  background: white;
  padding: 8px 16px;
  border: 1px solid rgb(235,235,235);
  border-radius: 2px;
}

.task-notification .task-notification-description {
  width: 300px;
}

.task-notification .task-notification-content {
  flex-grow: 1;
  padding: 0px 50px;
}

.task-notification p {
  margin: 0;
  line-height: 1.4;
}

.task-notification small {
  color: #000000;
  font-weight: 700;
}

.small-thin {
  color: #6a6a6a;
  font-weight: 400;
  font-size: 12px;
}

.small-bold {
  color: #000000;
  font-weight: 600;
  font-size: 14px;
}

.task-notification .task-notification-actions {
  opacity: 0;
  display: flex;
  transition: ease .3s;
}

.task-notification:hover .task-notification-actions {
  opacity: 1;
}

.task-notification .task-notification-actions a {
  color: #999999;
  margin-left: 16px;
  font-size: 14px;
}

.task-notification .task-notification-actions a:hover {
  color: #555555;
}

// modal
.modal-content {
  border-radius: 5px;
}

// budget
#nav-budget {
  display: flex;
}

#budget-numbers {
  border-left: solid 3px;
  border-color: rgb(111, 111, 111);
  height: 90%;
  margin-left: 30px;
  padding-left: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.container {
  padding: 0px;
}

.img-thumbnail {
  border: 0px;
  padding: 0px;
  border-radius: 8px 8px 0px 0px;
}

.card-content {
  padding: 0px 20px;
}

#nav-documents {
  margin-top: 24px;
  margin-bottom: 24px;
  margin-left: 24px;
}

.btn-rounded {
  border-radius: 8px;
  margin-right: 60px;
}
.taglist {
  margin-top: 24px;
}

.custom-card-body {
  max-height: 90px;
}

.div_search {
  padding-left: 0px;
}

.p-caracteristic {
  display: flex;
  justify-content: flex-start;
  padding-left: 10px;
  font-size: 16px;
  font-weight: 600;
}

.p-client {
  display: flex;
  justify-content: flex-start;
  padding-left: 10px;
}

.task-notification-content {
  display: flex;
  justify-content: space-between;
}

